<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.trifonovkv.production.ui.calc.CalcFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/jura"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/handpicked"
            android:textAlignment="textEnd"
            android:textColor="@color/gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvHandpicked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:fontFamily="@font/russo_one"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/zero_rubles"
            android:textAlignment="textEnd"
            android:textColor="@color/white_100"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/jura"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/shift_fee"
            android:textAlignment="textEnd"
            android:textColor="@color/gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvShiftFee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:fontFamily="@font/montserrat_alternates"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/zero_rubles"
            android:textAlignment="textEnd"
            android:textColor="@color/gray"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/jura"
            android:gravity="end"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/result"
            android:textColor="@color/gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvMainResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/russo_one"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/zero_rubles"
            android:textColor="@color/white_100"
            android:textSize="40sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cacao" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingTop="48dp"
                android:paddingEnd="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        style="@style/position_main_text"
                        android:text="@string/adry" />

                    <TextView
                        style="@style/position_subtext"
                        android:text="@string/adry_subtext" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvAdryResult"
                    style="@style/position_result" />

                <EditText
                    android:id="@+id/etAdry"
                    style="@style/position_enter_count"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor" />

                <TextView style="@style/position_pieces" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        style="@style/position_main_text"
                        android:text="@string/afresh" />

                    <TextView
                        style="@style/position_subtext"
                        android:text="@string/afresh_subtext" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvAfreshResult"
                    style="@style/position_result" />

                <EditText
                    android:id="@+id/etAfresh"
                    style="@style/position_enter_count"
                    tools:ignore="Autofill,LabelFor" />

                <TextView style="@style/position_pieces" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        style="@style/position_main_text"
                        android:text="@string/afrost" />

                    <TextView
                        style="@style/position_subtext"
                        android:text="@string/afrost_subtext" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvAfrostResult"
                    style="@style/position_result" />

                <EditText
                    android:id="@+id/etAfrost"
                    style="@style/position_enter_count"
                    tools:ignore="Autofill,LabelFor" />

                <TextView style="@style/position_pieces" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        style="@style/position_main_text"
                        android:text="@string/afruit" />

                    <TextView
                        style="@style/position_subtext"
                        android:text="@string/afruit_subtext" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvAfruitResult"
                    style="@style/position_result" />

                <EditText
                    android:id="@+id/etAfruit"
                    style="@style/position_enter_count"
                    tools:ignore="Autofill,LabelFor" />

                <TextView style="@style/position_pieces" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        style="@style/position_main_text"
                        android:text="@string/alco" />

                    <TextView
                        style="@style/position_subtext"
                        android:text="@string/alco_subtext" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvAlcoResult"
                    style="@style/position_result" />

                <EditText
                    android:id="@+id/etAlco"
                    style="@style/position_enter_count"
                    tools:ignore="Autofill,LabelFor" />

                <TextView style="@style/position_pieces" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        style="@style/position_main_text"
                        android:text="@string/amez" />

                    <TextView
                        style="@style/position_subtext"
                        android:text="@string/amez_subtext" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvAmezResult"
                    style="@style/position_result" />

                <EditText
                    android:id="@+id/etAmez"
                    style="@style/position_enter_count"
                    tools:ignore="Autofill,LabelFor" />

                <TextView style="@style/position_pieces" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        style="@style/position_main_text"
                        android:text="@string/holod3" />

                    <TextView
                        style="@style/position_subtext"
                        android:text="@string/holod3_subtext" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvHolod3Result"
                    style="@style/position_result" />

                <EditText
                    android:id="@+id/etHolod3"
                    style="@style/position_enter_count"
                    tools:ignore="Autofill,LabelFor" />

                <TextView style="@style/position_pieces" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/imageButtonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="32dp"
        android:background="@null"
        android:src="@drawable/ic_baseline_save_48"
        app:tint="@color/cacao" />

</LinearLayout>