<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@color/dark_gray">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:fontFamily="@font/jura"
        android:text="@string/there_is_a_record_with_this_date"
        android:textColor="@color/gray"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="end">

        <TextView
            android:id="@+id/tvSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="end"
            android:textColor="@color/cacao"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/save"/>

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="@color/cacao"
            android:gravity="end"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/cancel"/>
    </LinearLayout>
</LinearLayout>